[package]
name = "orkestrator"
version = "0.0.7"
description = "your arkitekt frontend"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["api-all", "http-multipart", "reqwest-client", "system-tray"] }
reqwest = { version = "0.11.17", features = ["multipart"] }
tauri-plugin-localhost = "0.1.0"
portpicker = "0.1"
serde_derive = "1.0.145"
tokio = { version = "1.21.2", features = ["time", "net"] }
httparse = "1.8.0"
url = "2.3.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
